--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,77 @@
-###
-# This file is only here to make sure that something like
-#
-#    pip install -e .
-#
-# works as expected. Requirements can be found in setup.py.
-###
-
-.
+appdirs==1.4.4
+argh==0.26.2
+atomicwrites==1.4.0
+attrs==21.4.0
+awesome-slugify==1.6.5
+Babel==2.9.1
+backports.functools-lru-cache==1.6.4
+backports.ssl-match-hostname==3.7.0.1
+blinker==1.4
+certifi==2021.10.8
+chainmap==1.0.3
+chardet==4.0.0
+click==6.2
+configparser==4.0.2
+contextlib2==0.6.0.post1
+emoji==0.4.5
+enum34==1.1.10
+feedparser==5.2.1
+Flask==0.10.1
+Flask-Assets==0.10
+Flask-Babel==0.9
+Flask-Login==0.2.11
+Flask-Principal==0.3.5
+funcsigs==1.0.2
+future==0.15.2
+futures==3.1.1.post1
+idna==2.10
+importlib-metadata==2.1.2
+importlib-resources==3.3.1
+itsdangerous==1.1.0
+Jinja2==2.8.1
+Markdown==2.6.11
+MarkupSafe==1.1.1
+monotonic==1.3
+more-itertools==5.0.0
+-e git+git@github.com:mrbeam/MrBeamDoc.git@fe6aeb064dee2d5d987465f5dc251c349a4059af#egg=MrBeamDoc
+netaddr==0.7.20
+netifaces==0.10.9
+numpy==1.16.6
+-e git+git@github.com:mrbeam/OctoPrint.git@4336a57578346f2706b2bcb2b5556403d0f7ce85#egg=OctoPrint
+opencv-python==4.2.0.32
+packaging==20.9
+pathlib2==2.3.6
+pathtools==0.1.2
+pkginfo==1.2.1
+pluggy==0.13.1
+psutil==5.9.0
+py==1.11.0
+pyasn1==0.4.8
+pylru==1.0.9
+pyparsing==2.4.7
+pyserial==2.7
+pytest==4.6.11
+python-dateutil==2.6.1
+pytz==2021.3
+PyYAML==3.10
+regex==2021.11.10
+requests==2.27.0
+rsa==3.2.3
+sarge==0.1.4
+scandir==1.3
+semantic-version==2.4.2
+singledispatch==3.7.0
+six==1.16.0
+sockjs-tornado==1.0.7
+speaklater==1.3
+tornado==4.0.2
+typing==3.10.0.0
+Unidecode==0.4.21
+urllib3==1.26.7
+watchdog==0.8.3
+wcwidth==0.2.5
+webassets==2.0
+websocket-client==0.40.0
+Werkzeug==0.8.3
+wrapt==1.10.11
+zipp==1.2.0
