--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ graft octoprint_mrbeam/templates
 graft octoprint_mrbeam/static
 graft octoprint_mrbeam/state
 graft octoprint_mrbeam/translations
+include versioneer.py
+include octoprint_mrbeam/__version.py
