--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,6 @@ VCS = git
 style = pep440-tag
 versionfile_source = octoprint_mrbeam/__version.py
 versionfile_build = octoprint_mrbeam/__version.py
-tag_prefix = v
+tag_prefix =
 parentdir_prefix =
 lookupfile = .versioneer-lookup
