--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ description-file = README.md
 
 [versioneer]
 VCS = git
-style = pep440-tag
+style = pep440-post
 versionfile_source = octoprint_mrbeam/__version.py
 versionfile_build = octoprint_mrbeam/__version.py
 tag_prefix = v
