Modified the build.yml to run the job on certain branches and on all Pull requests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Build
 on:
   push:
     branches:
-      - feature/SW-1313-add-sonar-cloud
       - alpha
       - beta
       - stable
+      - mrbeam2-beta
       - mrbeam2-stable
   pull_request:
     types: [opened, synchronize, reopened]
