--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,13 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install pylint
+            pip install test-requirements.txt
       #      pip install pytest pytest-cov selenium numpy
       # This step fails as it needs alot of time to fix the dependencies
-      #- name: Running pytest
-      #  run: |
-      #      pytest -v  --cov --cov-report=xml --cov-report=html
+      - name: Running pytest
+        continue-on-error: true
+        run: |
+            pytest -v  --cov --cov-report=xml --cov-report=html
       # This step fails with error: ./octoprint_mrbeam permission denied
       #- name: GitHub Action for pylint
       #  uses: cclauss/GitHub-Action-for-pylint@0.7.0
