fix pip install of test requirments

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,4 @@ sonar.projectVersion=v0.11.0b3
 sonar.python.version= 2.7
 sonar.dynamicAnalysis=reuseReports
 sonar.python.coverage.reportPaths=*coverage*.xml
+sonar.sources=octoprint_mrbeam
