added excludes for the sonar coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,5 @@ sonar.projectVersion=v0.11.0b3
 sonar.python.version= 2.7
 sonar.dynamicAnalysis=reuseReports
 sonar.python.coverage.reportPaths=*coverage*.xml
-sonar.sources=octoprint_mrbeam
+sonar.coverage.exclusions=*/templates/*,*/static/*,*/translations/*
+sonar.source=octoprint_mrbeam
