--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=MrBeamPlugin
 sonar.projectVersion=v0.11.0b3
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.source=octoprint_mrbeam
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
@@ -14,5 +14,5 @@ sonar.projectVersion=v0.11.0b3
 sonar.python.version= 2.7
 sonar.dynamicAnalysis=reuseReports
 sonar.python.coverage.reportPaths=*coverage*.xml
-sonar.coverage.exclusions=*/templates/*,*/static/*,*/translations/*
-sonar.source=octoprint_mrbeam
+sonar.python.xunit.reportPath=xunit-result*.xml
+sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/*,octoprint_mrbeam/translations/*
