--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,6 @@
 [pytest]
 minversion = 4.0
-testpaths =
-    tests
-    octoprint_mrbeam
+testpaths = tests octoprint_mrbeam
 log_auto_indent = True
 log_cli = True
 log_cli_format = %(asctime)s %(levelname)s %(message)s
