--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,4 @@ tag_prefix = v
 parentdir_prefix =
 
 [coverage:run]
-omit=*/site-packages/*,*/tests/*,*/.eggs/*, */venv*/*
+omit=*/site-packages/*,*/tests/*,*/.eggs/*,*/venv*/*,*/htmlcov/*
