try to fix warning

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.python.version= 2.7
 sonar.dynamicAnalysis=reuseReports
 sonar.python.coverage.reportPaths=*coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
-sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/*,octoprint_mrbeam/translations/*
+sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/*,octoprint_mrbeam/translations/*,/opt/*,/home/*
