--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,8 +11,8 @@ sonar.source=octoprint_mrbeam
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.python.version= 2.7
+sonar.python.version=2.7
 sonar.dynamicAnalysis=reuseReports
-sonar.python.coverage.reportPaths=*coverage*.xml
+sonar.python.coverage.reportPaths=coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
 sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/*,octoprint_mrbeam/translations/*,/opt/*,/home/*
