--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,14 +5,17 @@ sonar.organization=mrbeam
 sonar.projectName=MrBeamPlugin
 sonar.projectVersion=v0.11.0b3
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.source=octoprint_mrbeam
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
 sonar.python.version=2.7
 sonar.dynamicAnalysis=reuseReports
+
+## sonar coverage settings
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.sources=octoprint_mrbeam
+sonar.tests=tests
 sonar.python.coverage.reportPaths=coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
 sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/*,octoprint_mrbeam/translations/*,/opt/*,/home/*
