try to get js out of the coverage report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,4 +18,5 @@ sonar.sources=octoprint_mrbeam
 sonar.tests=tests
 sonar.python.coverage.reportPaths=coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
-sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/*,octoprint_mrbeam/translations/*,/opt/*,/home/*
+#sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/**,octoprint_mrbeam/translations/*,/opt/*,/home/*
+sonar.coverage.exclusions=octoprint_mrbeam/static/**/*
