comment js testcoverage exclusion

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,5 +18,6 @@ sonar.sources=octoprint_mrbeam
 sonar.tests=tests
 sonar.python.coverage.reportPaths=coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
-#sonar.coverage.exclusions=octoprint_mrbeam/templates/*,octoprint_mrbeam/static/**,octoprint_mrbeam/translations/*,/opt/*,/home/*
+
+# remove js files from the coverage as we don't have testcoverage so far for them
 sonar.coverage.exclusions=octoprint_mrbeam/static/**/*
