SW-1459 run pytest on GitHub action to get coverage for sonar cloud (#1530)
* enabled pytest in build
* added exclude for site-packages
* added pytest-coverage to the test requirements
* added excludes for the sonar coverage
* added python unittests to sonar lint
* add pytest report to artifacts

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,6 @@ versionfile_source = octoprint_mrbeam/_version.py
 versionfile_build = octoprint_mrbeam/_version.py
 tag_prefix = v
 parentdir_prefix =
+
+[coverage:run]
+omit=*/site-packages/*,*/tests/*,*/.eggs/*,*/venv*/*,*/htmlcov/*
