--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,11 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install pylint
-      #      pip install pytest pytest-cov selenium numpy
-      # This step fails as it needs alot of time to fix the dependencies
-      #- name: Running pytest
-      #  run: |
-      #      pytest -v  --cov --cov-report=xml --cov-report=html
+            pip install -r test-requirements.txt
+      - name: Running pytest
+        continue-on-error: true
+        run: |
+            pytest -v  --cov --cov-report=xml --cov-report=html --junit-xml=xunit-result.xml --html=pytest-report.html
       # This step fails with error: ./octoprint_mrbeam permission denied
       #- name: GitHub Action for pylint
       #  uses: cclauss/GitHub-Action-for-pylint@0.7.0
@@ -58,3 +58,11 @@ jobs:
         with:
           name: pylint-report.log
           path: ./pylint-report.log
+      - uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage
+          path: htmlcov
+      - uses: actions/upload-artifact@v3
+        with:
+          name: pytest-report
+          path: pytest-report.html
