--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "cypress": "^10.3.0",
+    "@4tw/cypress-drag-drop": "^2.2.1",
+    "cypress": "^10.4.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1"
   },
