First version of pre-commit file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,11 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
   - repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: 22.3.0
     hooks:
       - id: black
         language_version: /usr/bin/python3
-        args: [-t, py27,] # -l, "110"]
+        args: [-l, "110"]
   - repo: https://github.com/prettier/prettier
     rev: 2.0.5 # Use the sha or tag you want to point at
     hooks:
