--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,8 +10,7 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
-  - repo: https://github.com/prettier/prettier
-    rev: 2.0.5 # Use the sha or tag you want to point at
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1 # Use the sha or tag you want to point at
     hooks:
       - id: prettier
-        files: \.(html|css|js)$
