--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 21.12b0 # Change to 22.3.0 in Python3
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
