--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/psf/black
-    rev: 21.12b0 # Change to 22.3.0 in Python3
-    hooks:
-      - id: black
+  # TODO: bring back after switching to Python3
+  #  - repo: https://github.com/psf/black
+  #    rev: 22.3.0
+  #    hooks:
+  #      - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1 # Use the sha or tag you want to point at
     hooks:
