--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,14 +6,13 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/psf/black
-    rev: 20.8b1
-    hooks:
-      - id: black
-        language_version: /usr/bin/python3
-        args: [-t, py27,] # -l, "110"]
-  - repo: https://github.com/prettier/prettier
-    rev: 2.0.5 # Use the sha or tag you want to point at
+# Bring back after switching to Python 3
+#  - repo: https://github.com/psf/black
+#    rev: 22.3.0
+#    hooks:
+#      - id: black
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1 # Use the sha or tag you want to point at
     hooks:
       - id: prettier
         files: \.(html|css|js)$
