--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,7 @@ jobs:
         with:
             python-version: 2.7
       - name: Install dependencies
-        run: |
-            python -m pip install --upgrade pip
-            pip install pylint
-            pip install -r test-requirements.txt
+        run: ./dev-setup.sh
       - name: Running pytest
         continue-on-error: true
         run: |
