--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,10 @@ jobs:
         with:
             python-version: 2.7
       - name: Install dependencies
-        run: ./dev-setup.sh
+        run: |
+            python -m pip install --upgrade pip
+            pip install pylint
+            pip install -r requirements-dev.txt
       - name: Running pytest
         continue-on-error: true
         run: |
