--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install pylint
-            pip install -r test-requirements.txt
+            pip install -r requirements-dev.txt
       - name: Running pytest
         continue-on-error: true
         run: |
