SW-1599 run formating for json files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,4 +16,4 @@ repos:
     rev: v2.7.1 # Use the sha or tag you want to point at
     hooks:
       - id: prettier
-        files: \.(html|css|js)$
+        files: \.(html|css|js|json)$
