--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,15 @@
 name: Build
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - alpha
+      - beta
+      - stable
+      - mrbeam2-beta
+      - mrbeam2-stable
+  pull_request:
+    types: [ opened, synchronize, reopened ]
 #  push:
 #    branches:
 #      - alpha
