--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,14 @@ jobs:
     name: Pre-commit
     runs-on: ubuntu-latest
     steps:
-      - name: set PY
+      - name: Set PY
         run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+      - name: Run Pre-commit all files
+        run: pre-commit run --all-files --show-diff-on-failure
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
-        run: pre-commit run --all-files --show-diff-on-failure
 
 #  sonarcloud:
 #    name: SonarCloud
