--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,23 @@ jobs:
         run: |
           echo Running for python version ${{ inputs.python_v }}
 
+  setup:
+    name: Setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up Python 2.7
+        uses: actions/setup-python@v2
+        with:
+            python-version: 2.7
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install pylint
+            pip install -r requirements-dev.txt
+
   pre-commit:
     name: Pre-commit
     runs-on: ubuntu-latest
