--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,21 @@ jobs:
         run: |
           echo Running for python version ${{ inputs.python_v }}
 
-  setup:
-    name: Setup
+#  pre-commit:
+#    name: Pre-commit
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Set PY
+#        run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+#      - name: Run Pre-commit all files
+#        run: pre-commit run --all-files --show-diff-on-failure
+#      - uses: actions/cache@v1
+#        with:
+#          path: ~/.cache/pre-commit
+#          key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
+
+  sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -34,70 +47,43 @@ jobs:
             python -m pip install --upgrade pip
             pip install pylint
             pip install -r requirements-dev.txt
-
-  pre-commit:
-    name: Pre-commit
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set PY
-        run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
       - name: Run Pre-commit all files
         run: pre-commit run --all-files --show-diff-on-failure
-      - uses: actions/cache@v1
-        with:
-          path: ~/.cache/pre-commit
-          key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
+      - name: Running pytest
+        continue-on-error: true
+        run: |
+            pytest -v  --cov --cov-report=xml --cov-report=html --junit-xml=xunit-result.xml --html=pytest-report.html
+      # This step fails with error: ./octoprint_mrbeam permission denied
+      #- name: GitHub Action for pylint
+      #  uses: cclauss/GitHub-Action-for-pylint@0.7.0
+      #  with:
+      #    args: '**/*.py'
+      #  if: always()
+      #  continue-on-error: true
+      - name: Analysing the code with pylint
+        continue-on-error: true
+        if: always()
+        run: |
+          pylint --ignore-patterns=tests/* --exit-zero **/*.py  2>&1 | tee pylint-report.log
+      - name: SonarCloud Scan
+        if: always()
+        uses: SonarSource/sonarcloud-github-action@master
+      #  with:
+      #    args: >
+      #      -Dsonar.verbose=true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-#  sonarcloud:
-#    name: SonarCloud
-#    runs-on: ubuntu-latest
-#      - uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#      - name: Set up Python 2.7
-#        uses: actions/setup-python@v2
-#        with:
-#            python-version: 2.7
-#      - name: Install dependencies
-#        run: |
-#            python -m pip install --upgrade pip
-#            pip install pylint
-#            pip install -r requirements-dev.txt
-#      - name: Running pytest
-#        continue-on-error: true
-#        run: |
-#            pytest -v  --cov --cov-report=xml --cov-report=html --junit-xml=xunit-result.xml --html=pytest-report.html
-#      # This step fails with error: ./octoprint_mrbeam permission denied
-#      #- name: GitHub Action for pylint
-#      #  uses: cclauss/GitHub-Action-for-pylint@0.7.0
-#      #  with:
-#      #    args: '**/*.py'
-#      #  if: always()
-#      #  continue-on-error: true
-#      - name: Analysing the code with pylint
-#        continue-on-error: true
-#        if: always()
-#        run: |
-#          pylint --ignore-patterns=tests/* --exit-zero **/*.py  2>&1 | tee pylint-report.log
-#      - name: SonarCloud Scan
-#        if: always()
-#        uses: SonarSource/sonarcloud-github-action@master
-#      #  with:
-#      #    args: >
-#      #      -Dsonar.verbose=true
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          name: pylint-report.log
-#          path: ./pylint-report.log
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          name: code-coverage
-#          path: htmlcov
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          name: pytest-report
-#          path: pytest-report.html
+      - uses: actions/upload-artifact@v3
+        with:
+          name: pylint-report.log
+          path: ./pylint-report.log
+      - uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage
+          path: htmlcov
+      - uses: actions/upload-artifact@v3
+        with:
+          name: pytest-report
+          path: pytest-report.html
