--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
             python-version: 2.7
+            cache: "pip"
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
             pip install pylint
             pip install -r requirements-dev.txt
+      - name: Set PY (pre-commit)
+        run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+      - uses: actions/cache@v1 (pre-commit)
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Run Pre-commit all files
         run: pre-commit run --all-files --show-diff-on-failure
       - name: Running pytest
