--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,14 +46,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install -r requirements-dev.txt
-      - name: Set PY (pre-commit)
-        run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
-      - uses: actions/cache@v1
-        id: cache
-        with:
-          path: ~/.cache/pre-commit
-          key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
-      - name: Run Pre-commit all files
+      - name: Running pre-commit
         run: pre-commit run --all-files --show-diff-on-failure
       - name: Running pytest
         continue-on-error: true
