--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,6 @@ on:
 jobs:
   build:
     uses: mrbeam/MrBeamPlugin/.github/workflows/build.yml@feature/SW-274-github-actions-setup-and-test
+    secrets: inherit
     with:
       python_v: "2.7"
