--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
             python-version: 2.7
+            cache: 'pip' # caching pip dependencies
+            cache-dependency-path: |
+              **/setup.cfg
+              **/requirements*.txt
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
