--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,16 @@ jobs:
         uses: actions/setup-python@v2
         with:
             python-version: 2.7
-            cache: 'pip' # caching pip dependencies
-            cache-dependency-path: |
-              **/setup.cfg
-              **/requirements*.txt
+#            cache: 'pip' # caching pip dependencies
+#            cache-dependency-path: |
+#              **/setup.cfg
+#              **/requirements*.txt
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
