--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,9 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
-            pip install -r requirements-dev.txt
+            pip install pyling
+            pip install pre-commit
+            pip install -r -I requirements-dev.txt
       - name: Run pre-commit (all files)
         run: pre-commit run --all-files --show-diff-on-failure
       - name: Run pytest
