--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install pylint pre-commit pytest
-            pip install -r -I requirements-dev.txt
+            pip install -r requirements-dev.txt
       - name: Run pre-commit (all files)
         run: pre-commit run --all-files --show-diff-on-failure
       - name: Run pytest
