Move reusable workflow to external repo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    uses: mrbeam/MrBeamPlugin/.github/workflows/build.yml@feature/SW-274-github-actions-setup-and-test
+    uses: mrbeam/mrb-workflows/.github/workflows/build.yml@main
     secrets: inherit
     with:
       python_v: 2.7
