--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,21 +2,21 @@
 # Tests can be run by: python -m pytest paht/to/MrBeamPlugin/tests/
 
 # The tags can be changed here (after @):
-git+https://github.com/mrbeam/MrBeamDoc.git@v1.0.0#egg=MrBeamDoc
-git+https://github.com/mrbeam/OctoPrint.git@v1.3.6.9#egg=OctoPrint
+# Todo: after merging mrb3-doc, point to the alpha branch
+git+https://github.com/mrbeam/mrb3-doc.git@feature/SW-1606-mrb-3-doc-to-python-3-10-6#egg=MrBeamDoc
+git+https://github.com/mrbeam/OctoPrint.git@feature/SW-1030-octoprint-upgrade-to-latest-v-1-x#egg=OctoPrint
 
-mock==3.0.5
-numpy==1.16.6
-opencv-python==4.2.0.32
-Pillow==6.2.2
-pre-commit==1.21.0
-pylint==1.6.5
-pytest==4.6.11
-pytest-datafiles==2.0
-pytest-mock==2.0.0
-requests-mock==1.9.3
-selenium==3.141.0
-webdriver-manager==2.4.0
-pytest-cov==2.12.1
-pytest-html==1.22.1
-python-statemachine==1.0.3
+mock
+numpy
+opencv-python
+Pillow
+pre-commit
+pytest
+pytest-datafiles
+pytest-mock
+requests-mock
+selenium
+webdriver-manager
+pytest-cov
+pytest-html
+python-statemachine
