--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,10 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-# Bring back after switching to Python 3
-#  - repo: https://github.com/psf/black
-#    rev: 22.3.0
-#    hooks:
-#      - id: black
+  - repo: https://github.com/psf/black
+    rev: 22.8.0
+    hooks:
+      - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1 # Use the sha or tag you want to point at
     hooks:
