SW-1965 cleanup sonarcloud config files (#24)
* SW-1965 cleanup sonarcloud config files

* Pass sonar args to workflow

* Point to test workflow

* Revert "Point to test workflow"

This reverts commit 02fff4d705daa207bf71d06943902a8fc32ebda6.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    uses: mrbeam/mrb-workflows/.github/workflows/build.yml@python2.7
+    uses: mrbeam/mrb-workflows/.github/workflows/build.yml@main
     secrets: inherit
     with:
       source_dir: octoprint_mrbeam
