--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: cypress-io/github-action@v4
         with:
+          start: npm start
+          wait-on: "http://localhost:5002/"
           browser: chrome
           record: true
         env:
