--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --reporter junit --config-file cypress.config.js",
-    "merge-reports": "jrm .cypress/results/combined.xml '.cypress/results/*.xml'"
+    "merge-reports": "jrm cypress/results/combined.xml 'cypress/results/*.xml'"
   }
 }
