--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,6 +13,12 @@ jobs:
     name: E2E on Chrome
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v3  # Cache dependencies to speed up process
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - uses: cypress-io/github-action@v4
         with:
           start: npm run docker:build-and-run
