Try mounting docker socket

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,10 +9,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - run: curl --unix-socket /var/run/docker.sock http://localhost/version
       - run: |
-          docker run -v /var/run/docker.sock:/var/run/docker.sock \
-           -ti docker
+          docker run -v /var/run/docker.sock:/var/run/docker.sock -v $(which docker):$(which docker) ubuntu bash
 
       - name: Cypress install
         uses: cypress-io/github-action@v4
