--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,7 +10,8 @@ jobs:
         uses: actions/checkout@v3
 
       - run: |
-          docker run -v /var/run/docker.sock:/var/run/docker.sock -v $(which docker):$(which docker) ubuntu bash
+          sudo apt-get update
+          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
       - name: Cypress install
         uses: cypress-io/github-action@v4
