--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -4,14 +4,17 @@ on: [push]
 jobs:
   install:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
+    container:
+      image: cypress/browsers:node12.18.3-chrome87-ff82
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - run: |
-          apt-get update
-          apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+#      - run: |
+#          apt-get update
+#          apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
       - name: Cypress install
         uses: cypress-io/github-action@v4
