--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-#      - run: |
-#          apt-get update
-#          apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+      - run: |
+          apt-get --allow-releaseinfo-change update
+          apt-get install docker.io -y
 
       - name: Cypress install
         uses: cypress-io/github-action@v4
