--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -59,6 +59,8 @@ jobs:
           path: /tmp
       - name: Load Docker image
         run: |
+          apt-get --allow-releaseinfo-change update
+          apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
           docker load --input /tmp/image.tar
           docker image ls -a
       - name: UI Tests - Chrome
