--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -50,8 +50,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
@@ -60,7 +60,7 @@ jobs:
       - name: Load Docker image
         run: |
           apt-get --allow-releaseinfo-change update
-          apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+          apt-get install docker.io -y
           docker load --input /tmp/image.tar
           docker image ls -a
       - name: UI Tests - Chrome
