--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -64,6 +64,7 @@ jobs:
           npm run docker:run
           docker image ls -a
           docker ps -a
+          docker logs mrbeam-plugin
       - name: UI Tests - Chrome
         uses: cypress-io/github-action@v4
         with:
